src/tests/snapshots/cargo_vet__tests__vet__builtin_simple_registry_suggestions.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

3 unvetted dependencies:
  third-party1:10.0.0 missing ["safe-to-deploy"]
  third-party2:10.0.0 missing ["safe-to-deploy"]
  transitive-third-party1:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect third-party1 10.0.0             (used by first-party)   (100 lines)
      NOTE: cargo vet import peer-company would eliminate this
    cargo vet inspect third-party2 10.0.0             (used by first-party)   (100 lines)
      NOTE: cargo vet import rival-company would eliminate this
      NOTE: cargo vet import peer-company would reduce this to a 1-line diff
    cargo vet inspect transitive-third-party1 10.0.0  (used by third-party1)  (100 lines)
      NOTE: cargo vet import rival-company would reduce this to a 36-line diff

estimated audit backlog: 300 lines

Use |cargo vet certify| to record the audits.

