src/tests/snapshots/cargo_vet__tests__vet__mock-complex-core10-too-weak.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-core",
      "version": "10.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-core",
        "notable_parents": "firstB, thirdA, thirdAB",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": "5.0.0",
          "to": "10.0.0",
          "diffstat": {
            "raw": "+75",
            "count": 75
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "third-core",
          "notable_parents": "firstB, thirdA, thirdAB",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": "5.0.0",
            "to": "10.0.0",
            "diffstat": {
              "raw": "+75",
              "count": 75
            }
          }
        }
      ]
    },
    "total_lines": 75
  }
}
