src/tests/snapshots/cargo_vet__tests__vet__mock-complex-missing-core5.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-core",
      "version": "5.0.0",
      "missing_criteria": [
        "reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-core",
        "notable_parents": "firstA",
        "suggested_criteria": [
          "reviewed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "5.0.0",
          "diffstat": {
            "raw": "+25",
            "count": 25
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "reviewed": [
        {
          "name": "third-core",
          "notable_parents": "firstA",
          "suggested_criteria": [
            "reviewed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "5.0.0",
            "diffstat": {
              "raw": "+25",
              "count": 25
            }
          }
        }
      ]
    },
    "total_lines": 25
  }
}
