src/tests/snapshots/cargo_vet__tests__vet__mock-complex-no-unaudited.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

4 unvetted dependencies:
  third-core:5.0.0 missing ["reviewed"]
  third-core:10.0.0 missing ["reviewed"]
  thirdA:10.0.0 missing ["reviewed"]
  thirdAB:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    Command                              Publisher  Used By                      Audit Size
    cargo vet inspect third-core 5.0.0   UNKNOWN    firstA                       25 lines
    cargo vet inspect third-core 10.0.0  UNKNOWN    firstB, thirdA, and thirdAB  100 lines
    cargo vet inspect thirdA 10.0.0      UNKNOWN    firstA                       100 lines
    cargo vet inspect thirdAB 10.0.0     UNKNOWN    firstAB                      100 lines

estimated audit backlog: 325 lines

Use |cargo vet certify| to record the audits.

