src/tests/snapshots/cargo_vet__tests__vet__mock-simple-no-unaudited.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

3 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]
  third-party2:10.0.0 missing ["reviewed"]
  transitive-third-party1:10.0.0 missing ["reviewed"]

recommended audits for reviewed:
    cargo vet inspect third-party1 10.0.0             (used by first-party)   (100 lines)
    cargo vet inspect third-party2 10.0.0             (used by first-party)   (100 lines)
    cargo vet inspect transitive-third-party1 10.0.0  (used by third-party1)  (100 lines)

estimated audit backlog: 300 lines

Use |cargo vet certify| to record the audits.

